--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 	}
 	@media print{form{display: none;}body{width: 708px;}}
 	</style>
-<script src="./17天搞定GRE单词背诵计划时间表生成器_files/bsStatic.js.下载" type="text/javascript" charset="utf-8"></script><script src="./17天搞定GRE单词背诵计划时间表生成器_files/fingerprint2.min.js.下载" type="text/javascript" charset="utf-8"></script><script src="./17天搞定GRE单词背诵计划时间表生成器_files/bs-engine.js.下载" type="text/javascript" charset="utf-8"></script></head>
+<script src="./17GR/bsStatic.js.下载" type="text/javascript" charset="utf-8"></script><script src="./17GR/fingerprint2.min.js.下载" type="text/javascript" charset="utf-8"></script><script src="./17GR/bs-engine.js.下载" type="text/javascript" charset="utf-8"></script></head>
 <body>
 
 
 <!-- BEGIN WAYBACK TOOLBAR INSERT -->
-<script type="text/javascript" src="./17天搞定GRE单词背诵计划时间表生成器_files/disclaim-element.js.下载"></script>
-<script type="text/javascript" src="./17天搞定GRE单词背诵计划时间表生成器_files/graph-calc.js.下载"></script>
+<script type="text/javascript" src="./17GR/disclaim-element.js.下载"></script>
+<script type="text/javascript" src="./17GR/graph-calc.js.下载"></script>
 <script type="text/javascript">//<![CDATA[
 var __wm = (function(imgWidth,imgHeight,yearImgWidth,monthImgWidth){
 var wbPrefix = "/web/";
 var wbCurrentUrl = "http://exam4.us/";
 
-var firstYear = 1997;
+var firstYear = 1996;
 var displayDay = "8";
 var displayMonth = "三月";
 var displayYear = "2016";
@@ -141,9 +141,9 @@ body {
  		<tr><td colspan="2">注1：本工具根据最新《<a href="http://www.amazon.cn/gp/product/B0011C0ZQ0/ref=as_li_ss_tl?ie=UTF8&amp;camp=536&amp;creative=3132&amp;creativeASIN=B0011C0ZQ0&amp;linkCode=as2&amp;tag=shawphy-23">17天搞定GRE单词</a>》第二版中，第35页上的21天时间表，动态生成时间表。与网上流传的老版扫描版略有不同。</td></tr>
  		<tr><td colspan="2">注2：本页面可以直接打印，打印的时候不会有上面的表单以及页尾的广告。</td></tr>
  		<tr><td colspan="2">注3：本工具建议使用 <a href="http://www.google.com/intl/zh-CN/chrome/browser/">谷歌浏览器</a> 访问。IE 10 以下版本不保证正常使用。 </td></tr>
- 		<tr><td colspan="2"><img src="./17天搞定GRE单词背诵计划时间表生成器_files/mail.png"></td></tr>
+ 		<tr><td colspan="2"><img src="./17GR/mail.png"></td></tr>
 		<tr><td colspan="2"><div class="bshare-custom"><tr><td colspan="2">注3：本工具原网址exam4.us，因原网页失效，所以本人转载到github。转载网页时本人做了略微修改，去掉了好书推荐等内容，只剩下时间表生成器。上方gmail是原作者的联系方式，本人<a href="https://www.zhihu.com/people/000xxx">知乎地址</a>。最后再次感谢原作者shawphy！</td></tr>
- <span class="BSHARE_COUNT bshare-share-count"></span></div><script type="text/javascript" charset="utf-8" src="./17天搞定GRE单词背诵计划时间表生成器_files/buttonLite.js.下载"></script><script type="text/javascript" charset="utf-8" src="./17天搞定GRE单词背诵计划时间表生成器_files/bshareC0.js.下载"></script></td></tr>
+ <span class="BSHARE_COUNT bshare-share-count"></span></div><script type="text/javascript" charset="utf-8" src="./17GR/buttonLite.js.下载"></script><script type="text/javascript" charset="utf-8" src="./17GR/bshareC0.js.下载"></script></td></tr>
 
 
  	</tbody></table>
@@ -163,7 +163,7 @@ body {
 <form>
 
 </form>
-<script src="./17天搞定GRE单词背诵计划时间表生成器_files/jquery-latest.min.js.下载"></script>
+<script src="./17GR/jquery-latest.min.js.下载"></script>
 <!-- <script src="jquery-latest.min.js"></script> -->
 <script>
 	$("#startDate").val(new Date().toJSON().slice(0,10));
