--- a/index.html
+++ b/index.html
@@ -239,12 +239,7 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260424129'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1260424129%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
-
-
-
-
+<script src="https://s95.cnzz.com/z_stat.php?id=1260424129&web_id=1260424129" language="JavaScript"></script>
 
 
 </body></html>
