--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body {
  		<tr><td colspan="2">注2：本页面可以直接打印，打印的时候不会有上面的表单以及页尾的广告。</td></tr>
  		<tr><td colspan="2">注3：本工具建议使用 <a href="http://www.google.com/intl/zh-CN/chrome/browser/">谷歌浏览器</a> 访问。IE 10 以下版本不保证正常使用。 </td></tr>
  		<tr><td colspan="2"><img src="./17GR/mail.png"></td></tr>
-		<tr><td colspan="2"><div class="bshare-custom"><tr><td colspan="2">注3：本工具原网址exam4.us，因原网页失效，所以本人转载到github。转载网页时本人做了略微修改，去掉了好书推荐等内容，只剩下时间表生成器。上方gmail是原作者的联系方式，本人<a href="https://www.zhihu.com/people/000xxx">知乎地址</a>。最后再次感谢原作者shawphy！</td></tr>
+		<tr><td colspan="2"><div class="bshare-custom"><tr><td colspan="2">转载者注：本工具原网址exam4.us，因原网页失效，所以本人转载到github。转载网页时本人做了略微修改，去掉了好书推荐等内容，只剩下时间表生成器。上方gmail是原作者的联系方式，本人<a href="https://www.zhihu.com/people/000xxx">知乎地址</a>。最后再次感谢原作者shawphy！</td></tr>
  <span class="BSHARE_COUNT bshare-share-count"></span></div><script type="text/javascript" charset="utf-8" src="./17GR/buttonLite.js.下载"></script><script type="text/javascript" charset="utf-8" src="./17GR/bshareC0.js.下载"></script></td></tr>
 
 
