--- a/index.html
+++ b/index.html
@@ -234,9 +234,11 @@ body {
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?d6d7ae3130cbaacab40c6d676c6a1e96";
+  hm.src = "https://hm.baidu.com/hm.js?d6d7ae3130cbaacab40c6d676c6a1e96";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
+</script>
+
 
 </body></html>
