--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@ body {
  		<tr><th>List 总数</th><td><input id="totalList" value="42"><br></td></tr>
  		<tr><th>是否逆序</th><td><input id="reverse" type="checkbox"></td></tr>
  		<tr><th></th><td><button id="generate">点击这里生成</button><button type="button" onclick="javascript:window.print()">打印</button></td></tr>
- 		<tr><td colspan="2">注1：本工具根据最新《<a href="http://www.amazon.cn/gp/product/B0011C0ZQ0/ref=as_li_ss_tl?ie=UTF8&amp;camp=536&amp;creative=3132&amp;creativeASIN=B0011C0ZQ0&amp;linkCode=as2&amp;tag=shawphy-23">17天搞定GRE单词</a>》第二版中，第35页上的21天时间表，动态生成时间表。与网上流传的老版扫描版略有不同。</td></tr>
+ 		<tr><td colspan="2">本工具原网址<a href="http://exam4.us/">exam4.us</a>已经恢复，请大家前往原网址生成计划表，为原作者增加点击，本网页只做备份用。</td></tr>
+		<tr><td colspan="2">注1：本工具根据最新《<a href="http://www.amazon.cn/gp/product/B0011C0ZQ0/ref=as_li_ss_tl?ie=UTF8&amp;camp=536&amp;creative=3132&amp;creativeASIN=B0011C0ZQ0&amp;linkCode=as2&amp;tag=shawphy-23">17天搞定GRE单词</a>》第二版中，第35页上的21天时间表，动态生成时间表。与网上流传的老版扫描版略有不同。</td></tr>
  		<tr><td colspan="2">注2：本页面可以直接打印，打印的时候不会有上面的表单以及页尾的广告。</td></tr>
  		<tr><td colspan="2">注3：本工具建议使用 <a href="http://www.google.com/intl/zh-CN/chrome/browser/">谷歌浏览器</a> 访问。IE 10 以下版本不保证正常使用。 </td></tr>
  		<tr><td colspan="2"><img src="./17GR/mail.png"></td></tr>
-		<tr><td colspan="2"><div class="bshare-custom"><tr><td colspan="2">转载者注：本工具原网址exam4.us，因原网页失效，所以本人转载到github。转载网页时本人做了略微修改，去掉了好书推荐等内容，只剩下时间表生成器。上方gmail是原作者的联系方式，本人<a href="https://www.zhihu.com/people/000xxx">知乎地址</a>。最后再次感谢原作者shawphy！</td></tr>
+		<tr><td colspan="2"><div class="bshare-custom"><tr><td colspan="2">转载者注：本工具原网址<a href="http://exam4.us/">exam4.us</a>。转载网页时本人做了略微修改，去掉了好书推荐等内容，只剩下时间表生成器。上方gmail是原作者的联系方式，本人<a href="https://www.zhihu.com/people/000xxx">知乎地址</a>。最后再次感谢原作者shawphy！</td></tr>
  <span class="BSHARE_COUNT bshare-share-count"></span></div><script type="text/javascript" charset="utf-8" src="./17GR/buttonLite.js.下载"></script><script type="text/javascript" charset="utf-8" src="./17GR/bshareC0.js.下载"></script></td></tr>
 
 
