--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 	}
 	@media print{form{display: none;}body{width: 708px;}}
 	</style>
-<script src="./17GR/bsStatic.js.下载" type="text/javascript" charset="utf-8"></script><script src="./17GR/fingerprint2.min.js.下载" type="text/javascript" charset="utf-8"></script><script src="./17GR/bs-engine.js.下载" type="text/javascript" charset="utf-8"></script></head>
+<script src="./17GR/bsStatic.js" type="text/javascript" charset="utf-8"></script><script src="./17GR/fingerprint2.min.js" type="text/javascript" charset="utf-8"></script><script src="./17GR/bs-engine.js" type="text/javascript" charset="utf-8"></script></head>
 <body>
 
 
 <!-- BEGIN WAYBACK TOOLBAR INSERT -->
-<script type="text/javascript" src="./17GR/disclaim-element.js.下载"></script>
-<script type="text/javascript" src="./17GR/graph-calc.js.下载"></script>
+<script type="text/javascript" src="./17GR/disclaim-element.js"></script>
+<script type="text/javascript" src="./17GR/graph-calc.js"></script>
 <script type="text/javascript">//<![CDATA[
 var __wm = (function(imgWidth,imgHeight,yearImgWidth,monthImgWidth){
 var wbPrefix = "/web/";
@@ -144,7 +144,7 @@ body {
  		<tr><td colspan="2">注3：本工具建议使用 <a href="http://www.google.com/intl/zh-CN/chrome/browser/">谷歌浏览器</a> 访问。IE 10 以下版本不保证正常使用。 </td></tr>
  		<tr><td colspan="2"><img src="./17GR/mail.png"></td></tr>
 		<tr><td colspan="2"><div class="bshare-custom"><tr><td colspan="2">转载者注：本工具原网址<a href="http://exam4.us/">exam4.us</a>。转载网页时本人做了略微修改，去掉了好书推荐等内容，只剩下时间表生成器。上方gmail是原作者的联系方式。最后再次感谢原作者shawphy！</td></tr>
- <span class="BSHARE_COUNT bshare-share-count"></span></div><script type="text/javascript" charset="utf-8" src="./17GR/buttonLite.js.下载"></script><script type="text/javascript" charset="utf-8" src="./17GR/bshareC0.js.下载"></script></td></tr>
+ <span class="BSHARE_COUNT bshare-share-count"></span></div><script type="text/javascript" charset="utf-8" src="./17GR/buttonLite.js"></script><script type="text/javascript" charset="utf-8" src="./17GR/bshareC0.js"></script></td></tr>
 
 
  	</tbody></table>
@@ -164,7 +164,7 @@ body {
 <form>
 
 </form>
-<script src="./17GR/jquery-latest.min.js.下载"></script>
+<script src="./17GR/jquery-latest.min.js"></script>
 <!-- <script src="jquery-latest.min.js"></script> -->
 <script>
 	$("#startDate").val(new Date().toJSON().slice(0,10));
